2008-12-16  Anders Carlsson  <andersca@apple.com>

        Reviewed by Kevin Decker.

        Instead of passing a gazillion booleans to WKPCLoadURL, pass a single set of flags.
        
        * Plugins/Hosted/NetscapePluginHostProxy.mm:
        (WKPCLoadURL):
        * Plugins/Hosted/NetscapePluginInstanceProxy.h:
        * Plugins/Hosted/NetscapePluginInstanceProxy.mm:
        (WebKit::NetscapePluginInstanceProxy::loadURL):
        * Plugins/Hosted/WebKitPluginClient.defs:
        * Plugins/Hosted/WebKitPluginHostTypes.h:

2008-12-16  Anders Carlsson  <andersca@apple.com>

        Reviewed by Kevin Decker.

        Add trailing null to headers to avoid a crash in the plug-in host.
        
        * Plugins/Hosted/HostedNetscapePluginStream.mm:
        (WebKit::HostedNetscapePluginStream::didReceiveResponse):

2008-12-15  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Cameron Zwarich.

        <rdar://problem/6289933> Change WebKit-related projects to build with GCC 4.2 on Leopard.

        * Configurations/Base.xcconfig:
        * Configurations/DebugRelease.xcconfig:

2008-12-15  Stephanie Lewis  <slewis@apple.com>

        Fix build.

        * Plugins/Hosted/NetscapePluginInstanceProxy.mm:

2008-12-15  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Change InstantiatePlugin to be asynchronous so we won't deadlock if the plug-in tries to call
        back into us while it's being instantiated.
        
        * Plugins/Hosted/NetscapePluginHostManager.mm:
        (WebKit::NetscapePluginHostManager::instantiatePlugin):
        * Plugins/Hosted/NetscapePluginHostProxy.h:
        (WebKit::NetscapePluginHostProxy::clientPort):
        * Plugins/Hosted/NetscapePluginHostProxy.mm:
        (WKPCInstantiatePluginReply):
        * Plugins/Hosted/NetscapePluginInstanceProxy.h:
        (WebKit::NetscapePluginInstanceProxy::Reply::):
        (WebKit::NetscapePluginInstanceProxy::Reply::Reply):